--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body,html{
 
 
 #conteiner_menu_principal{
-    background-color: #d4d0cc;
+    background-color:rgb(81, 154, 200);
     float: right;
     width: 100%;
     position: fixed;
@@ -31,19 +31,19 @@ a{
     color: #fff;
 }
 #menu_principal ul a{
-    color: #5e5f4b;
+    color: #fff;
     padding: 1em;
-    background-color: #d4d0cc;
+    background-color:rgb(81, 154, 200);
 }
 #menu_principal ul a:hover{
-        background: #2885bf;
+        background: rgb(40, 133, 191);
         color: #fff;
 }
 
 #home #menu_principal li a.home,
 #pontos_historicos li a.pontos_historicos,
 #praias li a.praias{
-    background: #2885bf;
+    background: rgb(40, 133, 191);
     color: #fff;
 }
 
@@ -55,8 +55,9 @@ a{
     left: 0px;
 }
 .titulo_foto span{
-    background-color: grey;
+    background-color:rgb(9, 6, 6,0.5);
     padding: 10px;
+    color: #fff;
     font-size: 2em;
 
 }
@@ -80,7 +81,7 @@ a{
 
 
 .fundo_texto_imagem{
-    background: #fff;
+    background: rgb(81, 154, 200);
 }
 
 
@@ -88,8 +89,8 @@ a{
     width: 70%;
     margin: 0 auto;
     display: flex;
-    color: black;
-    opacity: 0.7;
+    color: #fff;
+    opacity: 1;
 }
 
 .conteudo_direita{
@@ -104,7 +105,7 @@ a{
 
 
 #conteiner_rodape{
-    background: #111;
+    background:rgb(81, 154, 200);
     color: #fff;
     width: 100%;
     overflow: hidden;
