--- a/css/style_pontos_historicos.css
+++ b/css/style_pontos_historicos.css
@@ -16,7 +16,4 @@
     text-align: justify;
     text-indent: 2.5em;
     font-size: 1.5em;
-} sadjhoasoihoanlhshaiockaioiojakld
-asnklkhkad
-klhsadhahlçl,s,lkhkaslnçl
-::-webkit-textfield-decoration-container
+} 
