Criei um novo  layout para os pontos turísticos
Criei um novo  layout para os pontos turísticos

--- a/css/style_main.css
+++ b/css/style_main.css
@@ -88,9 +88,9 @@ body,html{
 
 
 div #destaques{
-    width: 100%;
     display: flex;
     margin: 0 auto;
+    flex-wrap: wrap;
 }
 
 /*Mini destaque com foto e link para a matéria*/
