--- a/css/style_pontos_historicos.css
+++ b/css/style_pontos_historicos.css
@@ -1,12 +1,54 @@
+body{
+    background-color: antiquewhite;
+}
+
+.conteinerFotos{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.fotoDestaque{
+    width: 200px;
+    height: 350px;
+    margin-top: 100px;
+    margin-left: 30px;
+    border-radius: 5pc;
+    box-shadow: 2px 2px 2px grey;
+}
+
+.fotoDestaque1{
+        background-image: url(../imagens/destaque_forte_reis_magos.png);
+        opacity: 0.8;
+}
+
+.fotoDestaque2{
+    background-image: url(../imagens/destaque_rua_chile.png);
+}
+
+.fotoDestaque3{
+    background-image: url(../imagens/destaque_igreja_matriz.png);
+}
+.fotoDestaque4{
+    background-image: url(../imagens/destaque_rua_chile.png);
+}
+
+.fotoDestaque5{
+    background-image: url(../imagens/destaque_igreja_matriz.png);
+}
+
+
+
+
 .fundo_artigo{
-    border: 5px solid #fff; 
     width: 80%;  
     margin: 0 auto;
+    margin-bottom: 5%;
 } 
 .conteudo_artigo{
     margin-top: 100px;
     padding: 20px;
-    background-color: bisque;
+    background-color: rgb(225, 237, 242);
     color: rgba(0, 0, 0, 0.7)
 }
 .conteudo_artigo h3{
