--- a/css/style_main.css
+++ b/css/style_main.css
@@ -53,11 +53,11 @@ nav{
         position: absolute;
         top: 5vh;
         right: 0;
-        width: 30vw;
+        width: 40vw;
         height: 92vh;
         background-color: #519ac8;
         flex-direction: column;
-        align-items: center;
+        align-items: left;
         justify-content: space-around;
         transform: translateX(100%);
         transition: transform 0.3s ease-in;
@@ -128,13 +128,13 @@ nav{
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: bottom;
+    background-position: center;
     background-attachment: fixed;
 }
 
 /*imagem Paralax da aba Home*/
 #home div.foto1{
-    background-image: url(../imagens/natal.jpg);
+    background-image: url(../imagens/natal.png);
 }
 #home div.foto2{
     background-image: url(../imagens/pontos_natal.jpg);
