html e css do carrossel

--- a/css/style_main.css
+++ b/css/style_main.css
@@ -47,7 +47,7 @@ nav{
 
 @media (max-width:999px ){
     body {
-        overflow-x: hidden !important;
+        overflow-x: hidden;
     }
 
     .nav-list{
