--- a/css/style_main.css
+++ b/css/style_main.css
@@ -62,6 +62,7 @@ nav{
         justify-content: space-around;
         transform: translateX(100%);
         transition: transform 0.3s ease-in;
+        z-index: 999;
     }
     .nav-list li{
         margin-left: 0;
