--- a/css/style_main.css
+++ b/css/style_main.css
@@ -18,6 +18,8 @@ nav{
     align-items: center;
     background: #519ac8;
     height: 8vh;
+    position: fixed;
+    width: 100%;
 }
 
 .nav-list{
@@ -45,13 +47,13 @@ nav{
 
 /*Responsividade*/
 
-@media (max-width:999px ){
+@media screen and (max-width:999px ){
     body {
         overflow-x: hidden;
     }
 
     .nav-list{
-        position: absolute;
+        position: fixed;
         top: 5vh;
         right: 0;
         width: 40vw;
@@ -99,6 +101,7 @@ nav{
     padding: 1em;
     background-color:rgb(81, 154, 200);
     text-decoration: none;
+
 }
 #menu_principal ul a:hover{
         background: rgb(40, 133, 191);
