--- a/css/style_pontos_historicos.css
+++ b/css/style_pontos_historicos.css
@@ -89,6 +89,13 @@ body{
     .caixa-carrossel{
         margin-top: 3%;
     }
+    .conteudo_artigo h3{
+        text-align: center;
+    }
+    .conteudo_artigo img{
+        display: block;
+        margin: 0 auto;
+    }
 
     
 }
@@ -96,6 +103,7 @@ body{
 .fundo_artigo{
     width: 80%;  
     margin: 0 auto;
+    margin-top: -3%;
     margin-bottom: 5%;
 } 
 .conteudo_artigo{
